infra/kubernetes/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: business-tools
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - macmini.localdomain
      secretName: business-tools-tls
  rules:
    - host: macmini.localdomain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: business-tools-web
                port:
                  name: http
